2007-02-10  Mike Jarabek  <mjarabek@sentex.ca>

	* include/i_vars.h include/prototype.h lib/system-gschemrc.in
	src/g_rc.c src/g_register.c src/i_vars.c: Added code to scale the
	output postscript font under user control.  This is controlled via
	the postscript-font-scale rc keyword.

2007-02-10 Carlos Nieves Onega <cnieves@iespana.es>

	* scheme/auto-place-attribs.scm: Check if the list is empty before
	  calling to stable-sort. It is an error for guile versions >= 1.8.
	  Thanks to DJ for reporting this.

	* src/globals.c: Removed quit_func since it is completely unused.

	* configure.ac.in: Added a call to AC_GNU_SOURCE to make autoconf
	and friends complain less.
	
2007-01-16 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/x_image.c: Removed unnecessary printf

2007-01-09 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/o_misc.c: Applied patch by Peter Clifton to prevent a crash 
	when updating embedded components.  Should not free strings that
	are owned by libgeda.

2007-01-08 Ales Hvezda   <ahvezda@geda.seul.org>

	* include/prototype.h, src/o_misc.c: Moved o_embed and o_unembed
	into libgeda so that gschlas can also call these functions
	(to add shell scriptable embed/unembed of all components/pictures 
	functionality).

2007-01-05 Carlos Nieves Onega <cnieves@iespana.es>

	* configure.ac.in: Applied patch from Peter Clifton, adding
	  missing AC_DEFINE(HAS_LIBGD, 1,...) which is still required 
	  to enable libgd support.
	
2007-01-04 Werner Hoch <werner.ho@gmx.de>

	* src/x_compselect.c: added expand property for the filter entry

	* src/x_autonumber.c: set default the searchtext to the first history
	  element, use SCOPE_PAGE as skip default value

2007-01-03 Werner Hoch <werner.ho@gmx.de>

	* src/x_print.c: replaced saveas button with a fileopen icon,
	  Changed labels and added colons, fixed widget packaging.

	* bitmap/Makefile.am, bitmap/gschem-alignment*.png,
	  bitmap/gschem-filltype*.png: new icons for filltype and text
	  alignment.
